--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
   <modules>
@@ -13,17 +11,18 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.1.2.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <relativePath /> <!-- lookup parent from repositories -->
   </parent>
 
   <groupId>sky.one</groupId>
   <artifactId>swk-pc</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>swk-pc</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
     <java.version>11</java.version>
+    <project.scm.id>my-git</project.scm.id>
   </properties>
 
   <build>
@@ -32,7 +31,21 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+          <configuration>
+              <goals>
+                  install
+              </goals>
+          </configuration>
+      </plugin>
     </plugins>
   </build>
+
+  <scm>
+    <developerConnection>scm:git:https://github.com/skyabove/sfg-pc.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
 </project>
